--- a/store/store/css/styles.css
+++ b/store/store/css/styles.css
@@ -6,7 +6,7 @@ body, html{
 header{
   padding-top: 30px;
   background-color: purple;
-  height: 120px;
+  height: auto;
 }
 .menu{
   flex: 1;
@@ -25,7 +25,7 @@ header{
 }
 .menu .form input{
   width: 440px;
-  height: 62px;
+  height: 40px;
   border-radius: 14px;
   border: none;
   padding: 20px;
@@ -41,32 +41,24 @@ header{
 .menu .social ul li {
   padding: 0 10px;
 }
-.nav {
+#navbar{
+  display: flex;
+  justify-content: space-around;
   padding: 20px 0;
 }
-.nav ul {
-  display: flex; 
-  justify-content: space-around;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-.nav ul li a {
-  color: white;
+.nav-button{
   text-decoration: none;
-  text-align: left;
+  color: white;
   font-weight: 700;
 }
-.nav ul li a:hover{
-  text-decoration: underline;
-}
+
 /*section Hero*/
 section{
   padding-left: 30px;
   height: 340px;
 }
 #hero{
-  background:url(/store/store/assets/hero_bg.png);
+  background:url(../assets/hero_bg.png);
   background-size: cover;
   background-position: top center;
 }
@@ -97,7 +89,7 @@ section#hero .container {
   height: inherit;
   min-height: inherit;
 }
-/*main section - seccion principal*/
+/*main section - sección principal*/
 main{
   padding: 10px 30px 10px 30px;
   height: auto;
@@ -118,6 +110,10 @@ main{
   /*max-width: 25%;*/
   width: auto;
   overflow: hidden;
+}
+.conProductImg{
+  width: 100%;
+  height: 250px;
 }
 .product-img{
   width: 100%;
@@ -225,8 +221,8 @@ footer .footer-container{
   .menu .logo img{
     width: 160px;
   }
-  .menu .form input{
-    width: 140px;
+  #search{
+    width: 280px;
   }
   .container{
     width: 100%;
@@ -239,14 +235,14 @@ footer .footer-container{
   }
 }
 @media (max-width: 425px) {
+  .nav-button{
+    font-size: 14px;
+  }
   .menu .logo img{
     width: 150px;
   }
-  .menu .form input{
+  #search{
     width: 100px;
-  }
-  .nav ul li a{
-    font-size: 14px;
   }
   .container{
     width: 100%;
