Actividad: Generar tarjetas de carrito dinámicas. Finalizadas

--- a/store/store/css/cart.css
+++ b/store/store/css/cart.css
@@ -117,6 +117,12 @@ section#hero .container {
   justify-content: center;
   /* align-items: center; */
 }
+#cart-container{
+  display: flex;
+  flex-direction: column;
+justify-content: center;
+  gap: 10px;
+}
 .articles{
   display: flex;
   flex-direction: column;
@@ -186,6 +192,7 @@ section#hero .container {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .cart .cart-price-discount{
   font-size: 12px;
