--- a/store/store/css/favorites.css
+++ b/store/store/css/favorites.css
@@ -117,7 +117,7 @@ section#hero .container {
   justify-content: center;
   /* align-items: center; */
 }
-#cart-container{
+#fav-container{
   display: flex;
   flex-direction: column;
 justify-content: center;
@@ -130,7 +130,6 @@ justify-content: center;
 }
 /* CART ARTICLES */
 #carts .cart{
-  position: relative;
   width: 530px;
   height: 100px;
   padding: 15px 15px;
@@ -199,13 +198,6 @@ justify-content: center;
   font-size: 12px;
   font-weight: 700;
 }
-.cart-fav {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 5px;
-  margin-right: 5px;
-}
 /* mensaje no hay productos en el carrito */
 .container-carrito{
   width: 250px;
@@ -222,53 +214,6 @@ justify-content: center;
   font-size: 16px;
   color: teal;
 }
-
-/* order summary || RESUMEN DEL PEDIDO - SECCIÓN*/
-#total {
-  background-color: #F0F0F0;
-  width: 250px;
-  height: 130px;
-  padding: 15px;
-}
-.total-info{
-  /* background-color: #4054ad; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-}
-.total-info h2{
-  font-size: 16px;
-  margin: 10px 0;
-}
-.total-info .container-total{
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
-}
-.total-info .container-total span{
-  color: black;
-  font-size: 12px;
-  font-weight: 700;
-}
-.total-info .tax-policy{
-  color: gray;
-  font-size: 10px;
-}
-.total-info .btn-primary{
-  display: flex;
-  margin-top: 5px;
-  justify-content: center;
-  height: 30px;
-}
-.total-info .button-buy{
-  width: 100%;
-  background-color: teal;
-  border: none;
-  border-radius: 5px;
-  color: white;
-}
-
 /* FOOTER */
 footer{
   background-color: teal;
@@ -361,9 +306,6 @@ footer .footer-container{
   .cart .cart-price span{
     font-size: 10px;
   }
-  #total{
-    width: 200px;
-  }
   footer .container{
     width: 500px;
   }
@@ -412,7 +354,6 @@ footer .footer-container{
   .cart .cart-price span{
     font-size: 10px;
   }
-
   footer .container{
     width: 350px;
   }
